--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,6 @@ tags
 
 .env
 
-
+config.js
 # End of https://www.toptal.com/developers/gitignore/api/vim,intellij+all,visualstudiocode,macos,linux
 
