--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,24 @@
-- name: Set API key as environment variable
-  env:
-    API_KEY: ${{ secrets.API_KEY }}  # This retrieves the secret value
-  run: echo "API_KEY=${{ env.API_KEY }}" >> $GITHUB_ENV
+name: Build and Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    env:
+      API_KEY: ${{ secrets.API_KEY }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use the API Key
+        run: |
+          echo $API_KEY
+          # You can use $API_KEY in your script or code here
+
 
